<resources>
    <string name="app_name">MurasKitepkana</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="muras">Muras</string>
    <string name="e_mail">E-mail</string>
    <string name="регистрация">Регистрация</string>
    <string name="вход">Вход</string>
    <string name="пороль">Пороль</string>
    <string name="the_password_again">Введите пароль снова</string>
    <string name="Text">Зарегистрируйтесь, чтобы \nбесплатно читать книги ваших \nлюбимых писателей</string>
    <string name="goodle">Google</string>
    <string name="Text1">я прочитал и согласен с Правилами \nПользования и Политикой \nКонфидециальности</string>
    <string name="text_entrance">Войти, чтобы бесплатно читать книги\nкыргызских писателей!</string>
    <string name="register">Зарегистрироваться</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pasvordd">______ _____ ______ ______</string>
    <string name="recovery">Восстановить</string>
    <string name="войти">Войти</string>
    <string name="_4">Введите код из 4 цифр</string>
    <string name="восстановить">Восстановить</string>
</resources>