<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.muraskitepkana.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.muraskitepkana.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.muraskitepkana.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/passwordRecoveryFragment"
        android:name="com.example.muraskitepkana.ui.register.PasswordRecoveryFragment"
        android:label="PasswordRecoveryFragment" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.muraskitepkana.ui.register.RegisterFragment"
        android:label="fragment_password_recovery"
        tools:layout="@layout/fragment_password_recovery" />
    <fragment
        android:id="@+id/entranceFragment"
        android:name="com.example.muraskitepkana.ui.register.EntranceFragment"
        android:label="EntranceFragment" />
</navigation>